WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293883
[Page color sampling] Fixed element detection may incorrectly ignore subframes
https://bugs.webkit.org/show_bug.cgi?id=293883
Summary
[Page color sampling] Fixed element detection may incorrectly ignore subframes
Wenson Hsieh
Reported
2025-06-01 14:29:14 PDT
rdar://151981818
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-06-01 14:43:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46193
EWS
Comment 2
2025-06-01 18:41:45 PDT
Committed
295667@main
(bba8d155dff7): <
https://commits.webkit.org/295667@main
> Reviewed commits have been landed. Closing PR #46193 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug